# SCDO

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260324_0001_initial.py  20260324_0002_structural_meaning.py  20260324_0003_mechanics_ready_layer.py
apps/api/: main.py  routes.py
apps/core/: config.py  exporters.py  importers.py  measurement_profiles.py  quality.py  schemas.py  services.py  storage.py
apps/db/: models.py  session.py
apps/ui/: api_client.py  app.py  import_utils.py
docs/: acceptance_scenarios.md  api_contract.md  defect_catalog_steel_rc.md  domain_model.md  measurement_profiles.md  mechanics_ready_observation_package.md  parameter_ranking.md  quality_index_v1_1.md
sample_data/: demo_bundle.json  measurements_template.csv
sample_data/import_templates/: README.md  acceleration.csv  crack_width.csv  deflection.csv  displacement.csv  frequency.csv  humidity.csv  settlement.csv  strain.csv  temperature.csv  tilt.csv
scripts/: load_demo.py
tests/: support.py
tests/integration/: test_api.py  test_measurement_imports.py  test_postgres_contract.py  test_regression_contracts.py
tests/unit/: test_exporters.py  test_measurement_profiles.py  test_quality.py  test_ui_import_utils.py  test_ui_smoke.py
